# tensorking

./: README.md  TensorKing V1 Architecture  setup.cfg  setup.py  test_tensorking.py
src/: loss.py
tensorking/: activation.py  debug.py  layers.py  loss.py  models.py  optimizer.py  optimizers.py
tensorking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
