[metadata]
name = tensorking
version = 0.0.1
author = David King
author_email = dandisk@protonmail.com
description = A ML library made for and by David King based on the NNFS book.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/King-rg/tensorking


[options]
packages = find:
python_requires = >=3.7
include_package_data = True